--- a/page.jade
+++ b/page.jade
@@ -16,8 +16,8 @@ html(ng-app='test_angular_animation')
 			h2 Testing CSS Transitions with AngularJS 1.2
 			h3 by Nick Perkins 2013-10-19
 
-			//- h5 The code is on 
-			//- 	a(href="https://github.com/nickperkinslondon/test-angular-animation") Github
+			h5 The code is on 
+				a(href="https://github.com/nickperkinslondon/angular-css-animation-test") Github
 
 			br
 			span mod:
